# Preparations

Interview/Set12/: Advanced_Senior_CPP_Questions.md
Interview/Set13/: MiniProject_Concurrent_KVStore.md
Interview/Set13/kvstore/: CMakeLists.txt  vcpkg.json
Interview/Set13/kvstore/bench/: bench_store.cpp
Interview/Set13/kvstore/include/kvstore/: common.hpp  protocol.hpp  server.hpp  sharded_map.hpp  snapshot.hpp  store.hpp  ttl_manager.hpp  wal.hpp
Interview/Set13/kvstore/src/: main.cpp  protocol.cpp  server.cpp  sharded_map.cpp  snapshot.cpp  store.cpp  ttl_manager.cpp  wal.cpp
Interview/Set13/kvstore/tests/: test_integration.cpp  test_protocol.cpp  test_sharded_map.cpp  test_store.cpp  test_wal.cpp
Interview/set1/: Modern_CPP_Core_Questions.md
Interview/set10/: Latest_Trends_Coding_Questions.md
Interview/set2/: DSA_Problem_Solving_Questions.md
Interview/set3/: Design_Patterns_OOP_Questions.md
Interview/set4/: LLD_Low_Level_Design_Questions.md
Interview/set5/: HLD_System_Design_Questions.md
Interview/set6/: Multithreading_Concurrency_Questions.md
Interview/set7/: Memory_Performance_Questions.md
Interview/set8/: Domain_Specific_Questions.md
Interview/set9/: Projects_Behavioral_Questions.md
